# My_project

./: .env.example  .gitignore  README.md  pyproject.toml
data/: operations.json
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_decorators_py.html  z_145eef247bfb46b6_external_api_py.html  z_145eef247bfb46b6_file_read_py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_widget_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_test_masks_py.html  z_a44f0ac069e85531_test_processing_py.html  z_a44f0ac069e85531_test_widget_py.html
main/: main.py
src/: decorators.py  external_api.py  file_read.py  generators.py  groupping.py  masks.py  mylog.txt  processing.py  searching.py  utils.py  widget.py
tests/: test_decorators.py  test_external_api.py  test_file_read.py  test_generators.py  test_groupping.py  test_main.py  test_masks.py  test_processing.py  test_searching.py  test_utils.py  test_widget.py
